--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h2>This is the home page!</h2>
+<h2>This is the SUPER COOL home page!</h2>
 
 {% endblock %}
